# SPARS

./: 4_files.py  8_files.py  README.md  RL.py  best_RL.py  blabla.py  ex2_12in.py  idk.py  local.py  new_file copy.py  new_file.py  new_file_copy.py  pyproject.toml  read.py  requirements.txt  resize.py
RL_threshold_experiments/: 0.2_threshold.py  0.3_threshold.py  0.4_threshold.py  0.5_threshold.py  0.6_threshold.py
RL_window_size_experiments/: 16_16_8.py  32_32_16.py  48_48_24.py  64_64_32.py  8_8_8.py  net_copy_copy.py  net_window_size.py
classifier_experiments/: ex1_8in.py  ex3_16in.py  ex4_20in.py
